fix: improve contrast between headings and body copy
- trim vertical space after heading

--- a/css/post.css
+++ b/css/post.css
@@ -33,8 +33,8 @@
   
   h2,
   h3 {
-    font-weight: 500;
-    margin-block: 1lh .667lh;
+    font-weight: 600;
+    margin-block: 1lh .25lh;
   }
 
   h1 {
